[gd_scene load_steps=9 format=2]

[ext_resource path="res://textures/broccoli_NW.png" type="Texture" id=1]
[ext_resource path="res://textures/carrot_NW.png" type="Texture" id=2]
[ext_resource path="res://textures/tomato_NW.png" type="Texture" id=3]
[ext_resource path="res://scripts/single_recipe_display.gd" type="Script" id=4]
[ext_resource path="res://textures/circle_filled.png" type="Texture" id=5]
[ext_resource path="res://textures/arrow.png" type="Texture" id=6]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform vec4 blend_color: hint_color;

void fragment() {
	COLOR = texture(TEXTURE, UV) * blend_color;
}"

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/blend_color = Color( 1, 0, 0, 1 )

[node name="Control" type="Control"]
margin_right = 200.0
margin_bottom = 46.0
rect_min_size = Vector2( 200, 46 )
script = ExtResource( 4 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0.12549 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 900.0
margin_bottom = 207.0
rect_min_size = Vector2( 1000, 230 )
rect_scale = Vector2( 0.2, 0.2 )
custom_constants/margin_top = 25
custom_constants/margin_left = 50

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 50.0
margin_top = 25.0
margin_right = 1100.0
margin_bottom = 253.0
custom_constants/separation = 0

[node name="RecipeColor" type="TextureRect" parent="MarginContainer/HBoxContainer"]
material = SubResource( 2 )
margin_right = 180.0
margin_bottom = 228.0
texture = ExtResource( 5 )

[node name="Arrow" type="TextureRect" parent="MarginContainer/HBoxContainer"]
margin_left = 180.0
margin_right = 360.0
margin_bottom = 228.0
texture = ExtResource( 6 )

[node name="Ingredient1" type="TextureRect" parent="MarginContainer/HBoxContainer"]
margin_left = 360.0
margin_right = 540.0
margin_bottom = 228.0
texture = ExtResource( 1 )

[node name="Ingredient2" type="TextureRect" parent="MarginContainer/HBoxContainer"]
margin_left = 540.0
margin_right = 720.0
margin_bottom = 228.0
texture = ExtResource( 2 )

[node name="Ingredient3" type="TextureRect" parent="MarginContainer/HBoxContainer"]
margin_left = 720.0
margin_right = 900.0
margin_bottom = 228.0
texture = ExtResource( 3 )
